--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
   <!-- foontawesome -->
   <script src="https://kit.fontawesome.com/33d61158f6.js" crossorigin="anonymous"></script>
 
-  <title>React </title>
+  <title>TravelMate</title>
 </head>
 
 <body>
